added: modal html, css

--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
         <section class="todos__wrapper"></section>
       </main>
     </div>
+    <div class="edit__modal" style="display: none">
+      <div class="modal__content">
+        <div class="modal__close">
+          <i class="fa fa-times"></i>
+        </div>
+        <section class="edit__todo__form">
+          <form>
+            <input type="text" class="edit__todo__input" />
+            <button type="submit" class="button__edit__todo">Save</button>
+          </form>
+        </section>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
