--- a/index.html
+++ b/index.html
@@ -45,6 +45,34 @@
         </section>
       </div>
     </div>
+
+    <!--  XSS ATTACKS  -->
+    <!--
+    <div
+      style="
+        height: 100vh;
+        width: 100vw;
+        background-color: red;
+        color: black;
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      "
+    >
+      <h1>You have been Hacked</h1>
+    </div> 
+
+    <div onmouseover="(function() {console.log('What? JS code is working...');})()">
+      my todo
+    </div>
+
+    <img src onerror="(function() {window.location.href = 'https://my-blog-uz.web.app/auth'})()" />
+    
+    <script>console.log("Malicious code");</script>
+   -->
     <script src="script.js"></script>
   </body>
 </html>
