--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <script src="/scripts/dom-selectors.js"></script>
     <script src="/scripts/utilities.js"></script>
     <script src="/scripts/api.js"></script>
-    <script src="/scripts/handlers.js"></script>
-    <script src="/scripts/script.js"></script>
+    <script src="/scripts/app-handlers.js"></script>
+    <script src="/scripts/dom-handlers.js"></script>
   </body>
 </html>
